test/error/lud.lua
local a = 0xffffffffhi
